--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,5 +3,5 @@
 <%= form_for [@user] do |f| %>
   <%= f.label :name, :required => true %>
   <%= f.text_field :name %>
-  <%= f.submit %>
+  <%= f.submit "Submit" %>
 <% end %>
