--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Hello, Beautiful!</h1>
+<h1>Stack Overflow Mimic</h1>
 <hr />
 
 <div class="become">
-  <h2><%= link_to "Become a User", new_user_path %></h2>
+  <h2>&#9787; <%= link_to "Become a User", new_user_path %> &#9786;</h2>
 </div>
