--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,6 +7,26 @@ h2  {
   font-family: Georgia, Helvetica;
 }
 
+h3  {
+  font-family: Times, Helvetica;
+  text-align: center;
+}
+
+h4  {
+  font-family: Times, Helvetica;
+  text-align: center;
+}
+
+h5  {
+  font-family: Times, Helvetica;
+  text-align: center;
+}
+
+h6  {
+  font-family: Times, Helvetica;
+  text-align: center;
+}
+
 a:link {
   color: #E60000;
 }
@@ -22,5 +42,6 @@ body {
 .become {
   border: 2px solid #424240;
   border-radius: 10px;
+  background-color: #F0FFF0;
   text-align: center;
 }
