--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,9 @@
 <%= render "layouts/errors", :object => @user %>
 
-<%= form_for [@user] do |f| %>
-  <%= f.label :name, :required => true %>
-  <%= f.text_field :name %>
-  <%= f.submit "Submit" %>
-<% end %>
+<div class="user-form">
+  <%= form_for [@user] do |f| %>
+    <%= f.label :name, :required => true %>
+    <%= f.text_field :name %>
+    <%= f.submit "Submit" %>
+  <% end %>
+</div>
