--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
 <h2><%= @user.name %></h2>
+
+<h4><%= link_to "Return to Previous Page", new_user_path %></h4>
+<h4><%= link_to "Return to Home Page", root_path %></h4>
